this: my new commit

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
     <title>Title</title>
 </head>
 <body>
-    <input type="text" class="input">
-    <div class="container"></div>
-    <button class="btn-1">Push</button>
+
+    
+    <button class="btn">Push</button>
+
 </body>
 </html>
